[package]
name = "rust-line-oauth-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
axum_session = "0.10.0"
chrono = "0.4.31"
dotenv = "0.15.0"
oauth2 = "4.4.2"
rand = { version = "0.8.5", features = ["std", "std_rng"]}
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = "0.7.3"
tera = "1.19.1"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
